get memtable data